# hardware-analysis-system

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
docs/: COMPARISON_TABLES.md  SRS.md  USER_GUIDE.md
docs/progress/: sprint-01-report.md  sprint-02-report.md  sprint-03-report.md
scripts/: run-tests.sh
src/cpp/: hardware_monitor.cpp  hardware_monitor.hpp  optimization_engine.cpp  optimization_engine.hpp
src/csharp/: Program.cs  Stage1_AdvancedMemorySimulator.cs
src/csharp/Analysis/: CpuAnalyzer.cs
src/csharp/Core/: BaseAnalyzer.cs  IHardwareMonitor.cs  ReportGenerator.cs
src/csharp/Monitoring/: CpuMonitor.cs  DiskMonitor.cs  MemoryMonitor.cs
src/csharp/Stage3_Monitoring/: BaseAnalyzer.cs  HardwareMonitors.cs  IHardwareMonitor.cs  Program.cs  ReportGenerator.cs
src/python/: stage5_cache_simulator.py  stage6_ml_prediction.py
tests/unit/: BaseAnalyzerTests.cs  CpuAnalyzerTests.cs  CpuMonitorTests.cs  HardwareAnalysisSystem.Tests.csproj  ReportGeneratorTests.cs
tests/unit/cpp/: test_hardware_monitor.cpp
tests/unit/csharp/: HardwareAnalysisTests.cs
